--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ocrd</groupId>
 	<artifactId>ocrd</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<version>0.1</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>2.4.1</jersey.version>
 		<slf4j.version>1.7.25</slf4j.version>
-		<shiro.version>1.3.2</shiro.version>
 		<jetty.version>9.4.4.v20170414</jetty.version>
 	</properties>
 	<dependencies>
+		
 		<dependency>
        			<groupId>junit</groupId>
     			<artifactId>junit</artifactId>
@@ -41,35 +40,9 @@
    		 <version>1.0.4</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.5.5</version>
-		</dependency>
-		<dependency>
-   		 <groupId>javax.json</groupId>
-    	 <artifactId>javax.json-api</artifactId>
-    	 <version>1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-grizzly2-http</artifactId>
 			<version>${jersey.version}</version>
-		</dependency>
-		<!-- jetty-server -->
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>${jetty.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-webapp</artifactId>
-			<version>${jetty.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>apache-jsp</artifactId>
-			<version>${jetty.version}</version>
 		</dependency>
 		<!-- slf4j logging -->
 		<dependency>
@@ -87,27 +60,39 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 			<scope>runtime</scope>
 			<version>${slf4j.version}</version>
-		</dependency>	
+		</dependency>
 		<!-- javax -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
+		    <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp.jstl</groupId>
 			<artifactId>javax.servlet.jsp.jstl-api</artifactId>
 			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.5.5</version>
+    	    <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.json</groupId>
 			<artifactId>javax.json-api</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20170516</version>
+		</dependency>
+		<dependency>
+   		 <groupId>nz.ac.waikato.cms.weka</groupId>
+    	 <artifactId>weka-stable</artifactId>
+   	 	 <version>3.8.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
 		</dependency>
 	</dependencies>
 	<build>
