--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,18 @@
 		<jetty.version>9.4.4.v20170414</jetty.version>
 	</properties>
 	<dependencies>
-		
+	  <!-- gson for json serialization -->
+	  <dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.2</version>
+	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	  <dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.6</version>
+	  </dependency>
 		<dependency>
        			<groupId>junit</groupId>
     			<artifactId>junit</artifactId>
@@ -115,7 +126,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>com.onpositive.aml</groupId> 
+				<groupId>com.onpositive.aml</groupId>
 				<artifactId>raml-jaxrs-maven-plugin</artifactId>
 				<version>1.3.8</version>
 				<configuration>
@@ -138,4 +149,3 @@
 		</plugins>
 	</build>
 </project>
-
