--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- build simple executable file -->
+			<plugin>
+			  <artifactId>maven-assembly-plugin</artifactId>
+			  <configuration>
+				<archive>
+				  <manifest>
+					<mainClass>de.lmu.cis.pocoweb.Main</mainClass>
+				  </manifest>
+				</archive>
+				<descriptorRefs>
+				  <descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+			  </configuration>
+			  <executions>
+				<execution>
+				  <id>make-assembly</id> <!-- this is used for inheritance merges -->
+				  <phase>package</phase> <!-- bind to the packaging phase -->
+				  <goals>
+					<goal>single</goal>
+				  </goals>
+				</execution>
+			  </executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
