--- a/pom.xml
+++ b/pom.xml
@@ -147,13 +147,35 @@
 				</executions>
 			</plugin>
 			<!-- build simple executable file -->
+			<!-- <plugin> -->
+			<!--   <artifactId>maven-assembly-plugin</artifactId> -->
+			<!--   <configuration> -->
+			<!-- 	<archive> -->
+			<!-- 	  <manifest> -->
+			<!-- 		<mainClass>de.lmu.cis.pocoweb.Main</mainClass> -->
+			<!-- 	  </manifest> -->
+			<!-- 	</archive> -->
+			<!-- 	<descriptorRefs> -->
+			<!-- 	  <descriptorRef>jar-with-dependencies</descriptorRef> -->
+			<!-- 	</descriptorRefs> -->
+			<!--   </configuration> -->
+			<!--   <executions> -->
+			<!-- 	<execution> -->
+			<!-- 	  <id>make-assembly</id> -->
+			<!-- 	  <phase>package</phase> -->
+			<!-- 	  <goals> -->
+			<!-- 		<goal>single</goal> -->
+			<!-- 	  </goals> -->
+			<!-- 	</execution> -->
+			<!--   </executions> -->
+			<!-- </plugin> -->
+			<!-- build local grizzly -->
 			<plugin>
 			  <artifactId>maven-assembly-plugin</artifactId>
 			  <configuration>
 				<archive>
 				  <manifest>
-					<mainClass>de.lmu.cis.pocoweb.Main</mainClass>
-					<!-- <mainClass>ocrd.rest.raml.impl.RunLocalGrizzly</mainClass> -->
+					<mainClass>ocrd.rest.raml.impl.RunLocalGrizzly</mainClass>
 				  </manifest>
 				</archive>
 				<descriptorRefs>
@@ -162,8 +184,8 @@
 			  </configuration>
 			  <executions>
 				<execution>
-				  <id>make-assembly</id> <!-- this is used for inheritance merges -->
-				  <phase>package</phase> <!-- bind to the packaging phase -->
+				  <id>make-assembly</id>
+				  <phase>package</phase>
 				  <goals>
 					<goal>single</goal>
 				  </goals>
