--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>ocrd</groupId>
 	<artifactId>ocrd</artifactId>
 	<version>0.1</version>
+	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>2.4.1</jersey.version>
@@ -28,6 +29,7 @@
       <groupId>junit</groupId>
     	<artifactId>junit</artifactId>
     	<version>4.8.1</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- jax-rs -->
 		<dependency>
@@ -107,7 +109,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<!-- <sourceDirectory>src</sourceDirectory> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
