--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,9 @@
 				<artifactId>raml-jaxrs-maven-plugin</artifactId>
 				<version>1.3.8</version>
 				<configuration>
-					<sourceDirectory>${basedir}/src/resources/raml</sourceDirectory>
-					<basePackageName>org.raml.jaxrs.example</basePackageName>
+					<sourceDirectory>${basedir}/src/main/resources/raml</sourceDirectory>
+					<basePackageName>de.lmu.cis.api</basePackageName>
+					<!-- <basePackageName>org.raml.jaxrs.example</basePackageName> -->
 					<jaxrsVersion>2.0</jaxrsVersion>
 					<useJsr303Annotations>false</useJsr303Annotations>
 					<jsonMapper>jackson2</jsonMapper>
