--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
 		  <artifactId>commons-lang</artifactId>
 		  <version>2.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- <sourceDirectory>src</sourceDirectory> -->
