--- a/pom.xml
+++ b/pom.xml
@@ -57,23 +57,30 @@
 			<artifactId>jersey-container-grizzly2-http</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
-		<!-- slf4j logging -->
+
+		<!-- tinylog -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId>org.tinylog</groupId>
+			<artifactId>tinylog</artifactId>
+			<version>1.3.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<scope>runtime</scope>
-			<version>${slf4j.version}</version>
-		</dependency>
+		<!-- <!-\- slf4j logging -\-> -->
+		<!-- <dependency> -->
+		<!-- 	<groupId>org.slf4j</groupId> -->
+		<!-- 	<artifactId>slf4j-simple</artifactId> -->
+		<!-- 	<version>${slf4j.version}</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- 	<groupId>org.slf4j</groupId> -->
+		<!-- 	<artifactId>slf4j-api</artifactId> -->
+		<!-- 	<version>${slf4j.version}</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- 	<groupId>org.slf4j</groupId> -->
+		<!-- 	<artifactId>jcl-over-slf4j</artifactId> -->
+		<!-- 	<scope>runtime</scope> -->
+		<!-- 	<version>${slf4j.version}</version> -->
+		<!-- </dependency> -->
 		<!-- javax -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
