--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ language: java
 script:
  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
  - mvn test -B
+ - LANG='de_DE.utf8' mvn test -B
