Add LinePositionFeature to default features for dynamic lexicon training

--- a/src/main/resources/defaultConfiguration.json
+++ b/src/main/resources/defaultConfiguration.json
@@ -49,6 +49,10 @@
       {
         "type": "de.lmu.cis.ocrd.ml.features.ProfilerHighestVoteWeightFeature",
         "name": "HighestVoteWeight"
+      },
+      {
+        "type": "de.lmu.cis.ocrd.ml.features.LinePositionFeature",
+        "name": "LinePositionClass"
       }
     ]
   }
