--- a/src/main/resources/defaultConfiguration.json
+++ b/src/main/resources/defaultConfiguration.json
@@ -39,6 +39,10 @@
         "name": "MinCharTrigram"
       },
       {
+        "type": "de.lmu.cis.ocrd.ml.features.MinOCRConfidenceFeature",
+        "name": "MinOCRConfidence"
+      },
+      {
         "type": "de.lmu.cis.ocrd.ml.features.SumOfMatchingAdditionalOCRsFeature",
         "name": "SumOfMatching"
       },
