--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <!-- <sourceDirectory>src</sourceDirectory> -->
