Implement Levenshtein feature

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
         <jetty.version>9.4.4.v20170414</jetty.version>
     </properties>
     <dependencies>
+        <!-- http://easymock.org/ -->
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>4.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.7</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
