Fix handling of optional dm feature set

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         <jetty.version>9.4.4.v20170414</jetty.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
         <dependency>
             <groupId>org.apache.commons</groupId>
